--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@
 /.idea
 /vendor
 /node_modules
-/app/node_modules
+/frontend/node_modules
 /php/vendor
-/app/src/setupProxy.js
+/frontend/src/setupProxy.js
 /vendor
 /npm-debug.log
 
