--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-   c
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
+    "@reduxjs/toolkit": "^1.4.0",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "formik": "^2.1.5",
+    "http-proxy-middleware": "^0.19.1",
+    "react": "^16.13.0",
+    "react-bootstrap": "^1.3.0",
+    "react-dom": "^16.13.0",
+    "react-redux": "^7.2.1",
+    "react-router": "^5.2.0",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.1",
+    "standardx": "^5.0.0",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
