--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,22 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@fortawesome/react-fontawesome": "^0.1.11",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "@reduxjs/toolkit": "^1.4.0",
-    "axios": "^0.19.2",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.0",
-    "formik": "^2.1.5",
-    "http-proxy-middleware": "^0.19.1",
+    "formik": "^2.2.1",
+    "http-proxy-middleware": "^1.0.6",
     "react": "^16.13.0",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.0",
+    "react-dom": "^17.0.1",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^4.0.0",
     "standardx": "^5.0.0",
     "yup": "^0.27.0"
   },
@@ -36,7 +39,10 @@
     }
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
